--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 	<header>
 		<div class = "header_row">
 		  <ul class="tabs">
-			<li class="tab"><a href="index.html"> Home </a></li>
-			<li><a href="about.html"> About </a></li>
-			<li><a href="about.html"> Experience </a></li>
-			<li><a href="about.html"> Projects </a></li>
-			<li><a href="about.html"> Photography </a></li>
-			<li><a href="about.html"> Contact </a></li>
+			<li class="tab"><a href="index.html"> Home 🏠 </a></li>
+			<li><a href="about.html"> About 👧🏻 </a></li>
+			<li><a href="about.html"> Experience 💼 </a></li>
+			<li><a href="about.html"> Projects 💻 </a></li>
+			<li><a href="photography.html"> Photography 📸 </a></li>
+			<li><a href="about.html"> Contact 📝 </a></li>
 		  </ul>
 		</div>
 
 		<div class = "card">
 			<img src="BitMoji_Computer.jpg" />
-			<h1>C I N D Y</h1>
-			<h1>W A N G</h1>
+			<h1 id = "first_name">C I N D Y</h1>
+			<h1 id = "last_name">W A N G</h1>
 			<h3> Hi there! 👋</h3>
 			<p> I'm a student, photographer, and developer. </p>
 			<a href = "about.html"> About Me </a>
