new home + updated photography

--- a/photography.html
+++ b/photography.html
@@ -17,7 +17,6 @@
   <div class = "header_row">
     <ul class="tabs">
       <li class="tab"><a href="index.html"> Home 🏠</a></li>
-      <li><a href="about.html"> About 👧🏻 </a></li>
       <li><a href="about.html"> Experience 💼 </a></li>
       <li><a href="about.html"> Projects 💻 </a></li>
       <li><a href="photography.html"> Photography 📸 </a></li>
@@ -26,18 +25,20 @@
   </div>
   
   <div class = "card">
-    <h4>On the side, I am an ardent photography enthusiast. I love documenting special moments in wildlife, both flora and fauna, into memories to keep forever. There is nothing like capturing a bliss moment of tranquility, intimacy, or innocence. Photography challenges me to be more inquisitive and explore the world around me. Especially during quarantine, taking in these sights helped calm myself down after a long day of staring at a computer screen and remain grateful for the small things in life. Whether it is the insatiable desire to learn more about something that caught my eye or noticing the hidden beauty behind a subject for the first time, I believe that these lessons apply on a much deeper level beyond just the quick click of a camera. Furthermore, my favorite pasttime has taught me the importance of patience yet also spontaneity, channeling my inner creativity, and viewing a siutation through many perspectives. Here, you can find a sample with some of my shots. Enjoy!
+    <h4>On the side, I am an ardent photography enthusiast. I love documenting special moments in wildlife, both flora and fauna, into memories to keep forever. There is nothing like capturing a bliss moment of tranquility, intimacy, or innocence. Photography challenges me to be more inquisitive and explore the world around me. Especially during quarantine, taking in these sights helped me destress after a long day of staring at a computer screen and remain grateful for the small things in life. Whether it is the insatiable desire to learn more about something that caught my eye or noticing the hidden beauty behind a subject for the first time, I believe that these lessons apply on a much deeper level beyond just the quick click of a camera. Furthermore, my favorite pastime has taught me the importance of patience yet also spontaneity, channeling my inner creativity, and viewing a siutation from many different perspectives. Here, you can find a sample with some of my shots. Enjoy!
     <h4>
   </div>
 
   <div class="rows">
 	  <div class="column">
-	    <img src="Two_Cranes_Wings.jpeg"; style = "width:100%; padding-top: 10px">
+		<img src="Two_Cranes_Wings.jpeg"; style = "width:100%; padding-top: 10px">
+		<img src="Flying_Duck.jpg" style="width:100%; padding-top: 10px;">
 	    <img src="Moon.JPG" style="width:100%; padding-top: 10px;">
 	  </div>
 	  <div class="column">
-	  	<img src="Ducks_Jumping.JPG" style="width:100%; padding-top: 10px">
-	    <img src="Two_Geese.jpg" style="width:100%; padding-top: 10px; ">
+		<img src="Two_Geese.jpg" style="width:100%; padding-top: 10px; ">
+		<img src="Ducks_Jumping.JPG" style="width:100%; padding-top: 10px">
+		<img src="Blurry_Red_Flowers.jpg" style="width:100%; padding-top: 10px;">
 	  </div>
 	</div>
 
