--- a/photography.html
+++ b/photography.html
@@ -17,19 +17,19 @@
 			  </div>
 	  
 			  <div class="nav-link-wrapper">
-				<a href="about.html">Experience 💼</a>
+				<a href="experience.html">Experience 💼</a>
 			  </div>
 	  
 			  <div class="nav-link-wrapper">
-				<a href="about.html">Projects 💻</a>
+				<a href="projects.html">Projects 💻</a>
 			  </div>
 	  
 			  <div class="nav-link-wrapper active-nav-link">
-				<a href="index.html">Photography 📸</a>
+				<a href="photography.html">Photography 📸</a>
 			  </div>
 	  
 			  <div class="nav-link-wrapper">
-				<a href="about.html">Contact 📝</a>
+				<a href="contact.html">Contact 📝</a>
 			  </div>
 			</div>
 	  
