--- a/photography.html
+++ b/photography.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset='UTF-8'>
+		<meta name="viewport" content="width=device-width">
 		<title>Photography</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link rel="stylesheet" href="photography_style.css">
